package com.hedera.services.legacy.regression;

/*-
 * ‌
 * Hedera Services Test Clients
 * ​
 * Copyright (C) 2018 - 2020 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

import com.hederahashgraph.api.proto.java.AccountAmount;
import com.hederahashgraph.api.proto.java.AccountID;
import com.hederahashgraph.api.proto.java.Query;
import com.hederahashgraph.api.proto.java.Response;
import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
import com.hederahashgraph.api.proto.java.ResponseType;
import com.hederahashgraph.api.proto.java.Transaction;
import com.hederahashgraph.api.proto.java.TransactionBody;
import com.hederahashgraph.api.proto.java.TransactionGetReceiptResponse;
import com.hederahashgraph.api.proto.java.TransactionID;
import com.hederahashgraph.api.proto.java.TransactionRecord;
import com.hederahashgraph.api.proto.java.TransactionResponse;
import com.hederahashgraph.builder.RequestBuilder;
import com.hederahashgraph.service.proto.java.CryptoServiceGrpc;
import com.hedera.services.legacy.core.AccountKeyListObj;
import com.hedera.services.legacy.core.FeeClient;
import com.hedera.services.legacy.core.KeyPairObj;
import com.hedera.services.legacy.core.TestHelper;
import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;

import java.security.KeyPair;
import java.security.PrivateKey;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Properties;
import net.i2p.crypto.eddsa.KeyPairGenerator;
import org.apache.log4j.LogManager;
import org.apache.log4j.Logger;
import org.junit.Assert;

/**
 * Precheck should consider paid amount and fees together, preventing an attempt to transfer
 * the full balance of the account (as nothing would be left for fees)
 *
 * @author Peter
 */
public class CryptoTransferAll {

	public static final long TOTAL_AMOUNT = 500_000L;
	private static long DAY_SEC = 24 * 60 * 60; // secs in a day
	  private final Logger log = LogManager.getLogger(SmartContractPay.class);


	  private static final int MAX_RECEIPT_RETRIES = 60;
	  private static AccountID nodeAccount;
	  private static long node_account_number;
	  private static long node_shard_number;
	  private static long node_realm_number;
	  public static String INITIAL_ACCOUNTS_FILE = TestHelper.getStartUpFile();
	  private AccountID genesisAccount;
	  private Map<AccountID, KeyPair> accountKeyPairs = new HashMap<>();
    private KeyPair adminKeyPair = null;
	  private static String host;
	  private static int port;
	  private static long localCallGas;

	  public static void main(String args[]) throws Exception {
	    Properties properties = TestHelper.getApplicationProperties();
	    host = properties.getProperty("host");
	    port = Integer.parseInt(properties.getProperty("port"));
	    node_account_number = Utilities.getDefaultNodeAccount();
	    node_shard_number = Long.parseLong(properties.getProperty("NODE_REALM_NUMBER"));
	    node_realm_number = Long.parseLong(properties.getProperty("NODE_SHARD_NUMBER"));
	    nodeAccount = AccountID.newBuilder().setAccountNum(node_account_number)
	        .setRealmNum(node_shard_number).setShardNum(node_realm_number).build();
			localCallGas = Long.parseLong(properties.getProperty("LOCAL_CALL_GAS"));

			CryptoTransferAll scSs = new CryptoTransferAll();
			scSs.demo();
	  }


	  private void loadGenesisAndNodeAcccounts() throws Exception {
	    Map<String, List<AccountKeyListObj>> hederaAccounts = null;
	    Map<String, List<AccountKeyListObj>> keyFromFile = TestHelper.getKeyFromFile(INITIAL_ACCOUNTS_FILE);

	    // Get Genesis Account key Pair
	    List<AccountKeyListObj> genesisAccountList = keyFromFile.get("START_ACCOUNT");
	    ;

	    // get Private Key
			KeyPairObj genKeyPairObj = genesisAccountList.get(0).getKeyPairList().get(0);
			PrivateKey genesisPrivateKey = genKeyPairObj.getPrivateKey();
			KeyPair genesisKeyPair = new KeyPair(genKeyPairObj.getPublicKey(), genesisPrivateKey);

	    // get the Account Object
	    genesisAccount = genesisAccountList.get(0).getAccountId();
			accountKeyPairs.put(genesisAccount, genesisKeyPair);
	  }

	private Transaction createQueryHeaderTransfer(AccountID payer, long transferAmt)
			throws Exception {
		Transaction transferTx = TestHelper.createTransferSigMap(payer, accountKeyPairs.get(payer),
				nodeAccount, payer,
				accountKeyPairs.get(payer), nodeAccount, transferAmt);
		return transferTx;
	  }


	  private AccountID createAccount(KeyPair keyPair, AccountID payerAccount, long initialBalance)
	      throws Exception {
	    ManagedChannel channel = ManagedChannelBuilder.forAddress(host, port)
	        .usePlaintext()
	        .build();
	    CryptoServiceGrpc.CryptoServiceBlockingStub stub = CryptoServiceGrpc.newBlockingStub(channel);
	    Transaction transaction = TestHelper
	        .createAccountWithSigMap(payerAccount, nodeAccount, keyPair, initialBalance,
	            accountKeyPairs.get(payerAccount));
	    TransactionResponse response = stub.createAccount(transaction);
	    Assert.assertNotNull(response);
	    Assert.assertEquals(ResponseCodeEnum.OK, response.getNodeTransactionPrecheckCode());
	    System.out.println(
	        "Pre Check Response of Create  account :: " + response.getNodeTransactionPrecheckCode()
	            .name());

	    TransactionBody body = TransactionBody.parseFrom(transaction.getBodyBytes());
	    AccountID newlyCreateAccountId = TestHelper
	        .getTxReceipt(body.getTransactionID(), stub).getAccountID();
			accountKeyPairs.put(newlyCreateAccountId, keyPair);
	    channel.shutdown();
	    return newlyCreateAccountId;
	  }

	  private TransactionGetReceiptResponse getReceipt(TransactionID transactionId) throws Exception {
	    Query query = Query.newBuilder()
	        .setTransactionGetReceipt(RequestBuilder.getTransactionGetReceiptQuery(
	            transactionId, ResponseType.ANSWER_ONLY)).build();
	    ManagedChannel channel = ManagedChannelBuilder.forAddress(host, port)
	        .usePlaintext()
	        .build();
	    CryptoServiceGrpc.CryptoServiceBlockingStub stub = CryptoServiceGrpc.newBlockingStub(channel);
	    Response transactionReceipts = stub.getTransactionReceipts(query);
	    int attempts = 1;
	    while (attempts <= MAX_RECEIPT_RETRIES && transactionReceipts.getTransactionGetReceipt()
	        .getReceipt()
	        .getStatus().name().equalsIgnoreCase(ResponseCodeEnum.UNKNOWN.name())) {
	      Thread.sleep(1000);
	      transactionReceipts = stub.getTransactionReceipts(query);
	      System.out.println("waiting to getTransactionReceipts as not Unknown..." +
	          transactionReceipts.getTransactionGetReceipt().getReceipt().getStatus().name());
	      attempts++;
	    }
	    channel.shutdown();
	    return transactionReceipts.getTransactionGetReceipt();
	  }

	  private TransactionRecord transferTo (AccountID fromAcct, AccountID toAcct, long amount) throws Exception {
			ManagedChannel channel = ManagedChannelBuilder.forAddress(host, port)
					.usePlaintext()
					.build();
			CryptoServiceGrpc.CryptoServiceBlockingStub stub = CryptoServiceGrpc.newBlockingStub(channel);

			Transaction transferRequest = TestHelper.createTransferSigMap(fromAcct, accountKeyPairs.get(fromAcct),
					nodeAccount, fromAcct,
					accountKeyPairs.get(fromAcct), nodeAccount, amount);

			TransactionResponse response = stub.cryptoTransfer(transferRequest);
			log.info("transferTo precheck response :: " + response.getNodeTransactionPrecheckCode());

			TransactionBody transferBody = TransactionBody.parseFrom(transferRequest.getBodyBytes());
			TransactionGetReceiptResponse transferReceipt = getReceipt(
					transferBody.getTransactionID());
			log.info("transferTo receipt status :: " + transferReceipt.getReceipt().getStatus());

			TransactionRecord trRecord = getTransactionRecord(genesisAccount,
					transferBody.getTransactionID());
			log.info("transferTo tx record :: " + trRecord);


			channel.shutdown();
			return trRecord;
		}

	  private TransactionRecord getTransactionRecord(AccountID payerAccount,
	      TransactionID transactionId) throws Exception {
	    AccountID createdAccount = null;
	    ManagedChannel channel = ManagedChannelBuilder.forAddress(host, port)
	        .usePlaintext()
	        .build();
	    CryptoServiceGrpc.CryptoServiceBlockingStub stub = CryptoServiceGrpc.newBlockingStub(channel);
	    long fee = FeeClient.getCostForGettingTxRecord();
	    Response recordResp = executeQueryForTxRecord(payerAccount, transactionId, stub, fee,
	        ResponseType.COST_ANSWER);
	    fee = recordResp.getTransactionGetRecord().getHeader().getCost();
	    recordResp = executeQueryForTxRecord(payerAccount, transactionId, stub, fee,
	        ResponseType.ANSWER_ONLY);
	    TransactionRecord txRecord = recordResp.getTransactionGetRecord().getTransactionRecord();
	    System.out.println("tx record = " + txRecord);
	    channel.shutdown();
	    return txRecord;
	  }

	  private Response executeQueryForTxRecord(AccountID payerAccount, TransactionID transactionId,
	      CryptoServiceGrpc.CryptoServiceBlockingStub stub, long fee, ResponseType responseType)
	      throws Exception {
	    Transaction paymentTx = createQueryHeaderTransfer(payerAccount, fee);
	    Query getRecordQuery = RequestBuilder
	        .getTransactionGetRecordQuery(transactionId, paymentTx, responseType);
	    Response recordResp = stub.getTxRecordByTxID(getRecordQuery);
	    return recordResp;
	  }

	  public void demo() throws Exception {
	    loadGenesisAndNodeAcccounts();

	    KeyPair crAccountKeyPair = new KeyPairGenerator().generateKeyPair();
	    AccountID crAccount = createAccount(crAccountKeyPair, genesisAccount, TOTAL_AMOUNT);
	    Assert.assertNotEquals(0, crAccount.getAccountNum());
	    log.info("Account created successfully");

			TransactionRecord trRecord = transferTo (crAccount, nodeAccount, TOTAL_AMOUNT);
			List<AccountAmount> transferList = trRecord.getTransferList().getAccountAmountsList();
			for (AccountAmount aa : transferList) {
				log.info("Account: " + aa.getAccountID().getAccountNum() + ", amount: " + aa.getAmount());
			}

			AccountAmount fromTransfer = AccountAmount.newBuilder().setAmount(TOTAL_AMOUNT * -1L)
					.setAccountID(crAccount).build();
			AccountAmount toTransfer = AccountAmount.newBuilder().setAmount(TOTAL_AMOUNT)
					.setAccountID(nodeAccount).build();
			log.info("Don't want Account: " + fromTransfer.getAccountID().getAccountNum() + ", amount: " + fromTransfer.getAmount());
			log.info("Don't want Account: " + toTransfer.getAccountID().getAccountNum() + ", amount: " + toTransfer.getAmount());
			Assert.assertFalse("Full balance transfer from payer account found", transferList.contains(fromTransfer));
			Assert.assertFalse("Full balance transfer to node account found", transferList.contains(toTransfer));


		}
}
